[gd_scene load_steps=14 format=3 uid="uid://b3wxwx1rau8ke"]

[ext_resource type="Texture2D" uid="uid://dojbq1kmh1mfo" path="res://vendor/tinyDungeon/wizard.png" id="1_n4pnx"]
[ext_resource type="Material" uid="uid://dah4ivw2uoeo" path="res://materials/damage_material.tres" id="2_lm4h3"]
[ext_resource type="Script" path="res://characters/character_base.gd" id="2_ojt37"]
[ext_resource type="Texture2D" uid="uid://dra2mk7t6ek18" path="res://vendor/tinyDungeon/tilemap.png" id="3_73357"]
[ext_resource type="PackedScene" uid="uid://lmh2uxdp81cu" path="res://skills/skill_base.tscn" id="4_8dqlk"]
[ext_resource type="PackedScene" uid="uid://dtytvxd6ovx" path="res://skills/bullets/mage_ball.tscn" id="4_rvccc"]
[ext_resource type="Texture2D" uid="uid://cql36a7f36bs5" path="res://sprites/progressbar-out.png" id="7_nwquq"]
[ext_resource type="Texture2D" uid="uid://be5drloc2pyit" path="res://sprites/progressbar.png" id="7_o6cpj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n6vmq"]
size = Vector2(14, 14)

[sub_resource type="Animation" id="Animation_vgald"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_npce3"]
resource_name = "damage"
length = 0.33
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.296667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}

[sub_resource type="Animation" id="Animation_ftoam"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:material:shader_parameter/enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.433333, 0.5, 0.566667, 0.666667, 0.733333, 0.8, 0.9, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, true, false, true, true, false, true, true, false, true, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d1bbn"]
_data = {
"RESET": SubResource("Animation_vgald"),
"damage": SubResource("Animation_npce3"),
"dead": SubResource("Animation_ftoam")
}

[node name="CharacterBase" type="CharacterBody2D"]
z_index = 5
collision_mask = 132
motion_mode = 1
floor_constant_speed = true
script = ExtResource("2_ojt37")

[node name="Sprite" type="Sprite2D" parent="."]
material = ExtResource("2_lm4h3")
texture = ExtResource("1_n4pnx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_n6vmq")

[node name="WeaponPivot" type="Node2D" parent="."]

[node name="Weapon" type="Sprite2D" parent="WeaponPivot"]
position = Vector2(28, 0)
rotation = 1.5708
texture = ExtResource("3_73357")
region_enabled = true
region_rect = Rect2(153, 170, 16, 16)

[node name="Aim" type="Marker2D" parent="WeaponPivot"]
position = Vector2(8, 1.004e-11)
rotation = 1.5708
scale = Vector2(0.7, 0.7)

[node name="Skills" type="Node" parent="."]

[node name="MageBall" parent="Skills" node_paths=PackedStringArray("character_base_instance") instance=ExtResource("4_8dqlk")]
destroy_after_s = 10.0
character_base_instance = NodePath("../..")
bullet_resource = ExtResource("4_rvccc")
spawn_interval_s = 3.0

[node name="DamageAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d1bbn")
}

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -10.0
offset_top = 9.0
offset_right = 10.0
offset_bottom = 29.0

[node name="HPBar" type="TextureProgressBar" parent="Control"]
layout_mode = 1
offset_right = 60.0
offset_bottom = 16.0
scale = Vector2(0.35, 0.35)
value = 100.0
texture_over = ExtResource("7_nwquq")
texture_progress = ExtResource("7_o6cpj")
